[tool.poetry]
name = "Shape Sprint"
version = "1.0.0"
description = ""
authors = ["Christian Larsen <christi9nl9rsen@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0"
pygame = "^2.1.2"
dearpygui = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"